fix: restore map visibility in location page by setting absolute fullscreen height

--- a/frontend/assets/css/location.css
+++ b/frontend/assets/css/location.css
@@ -2,8 +2,11 @@
 
 /* MAP FULLSCREEN */
 #map {
-    flex: 1;
-    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
     z-index: 1;
 }
 
